src/validation/tests/snapshots/rusty__validation__tests__enum_validation_test__enum_mismatch_error_with_many_variants_truncates_values_for_better_readability.snap
---
source: src/validation/tests/enum_validation_test.rs
expression: diagnostics
---
error: Value 1000 is not bound in [red(0), ..., violet(7)]
  ┌─ <internal>:7:24
  │
7 │             myColor := 1000;
  │                        ^^^^ Value 1000 is not bound in [red(0), ..., violet(7)]

error: Consider using enums rather than literal integers
  ┌─ <internal>:7:24
  │
7 │             myColor := 1000;
  │                        ^^^^ Consider using enums rather than literal integers


